gitops/apps/base/health-ingester/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: health-ingester
  labels:
    app.kubernetes.io/name: health-ingester
spec:
  selector:
    app.kubernetes.io/name: health-ingester
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
